--- a/src/pages/auth/styles.module.css
+++ b/src/pages/auth/styles.module.css
@@ -15,6 +15,7 @@
   padding: 10px 20px;
   margin: 0 10px;
   border-radius: 5px;
+  width: 200px;
   cursor: pointer;
   font-family: Arial, sans-serif;
   color: #333;
@@ -43,6 +44,8 @@
   border-radius: 5px;
   border: none;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  width: 200px;
+
 }
 
 .form input[type="submit"] {
@@ -51,6 +54,11 @@
   background-color: #4caf50;
   color: white;
   cursor: pointer;
+  width: 200px;
+}
+
+.form input[type="submit"]:hover {
+  background-color: #43a047;
 }
 
 /* For buttons */
